--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
   - docker run -e CI=true jnalewabau/docker-react yarn test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-017078724186"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+  
